# esp32p4-uvc-framegrabber

./: .gitignore  CLAUDE.md  README.md  cam_viewer.py  partitions.csv  sdkconfig.defaults  tcp_sink.py
c6_firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
c6_firmware/main/: idf_component.yml  main.c
components/usb_device_uvc/: CMakeLists.txt  usb_device_uvc.c
components/usb_device_uvc/include/: usb_device_uvc.h
components/usb_device_uvc/tusb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h  uvc_frame_config.h
hardware/: README.txt
hardware/Dali adapter board/: 1-PCB_PCB_Dali D8X3C to FFC adapter_2.json  1-Schematic_Dali D8X3C to FFC adapter.json  BOM_Dali-D8X3C-to-FFC-adapter_2026-07-20.csv  PickAndPlace_PCB_Dali-D8X3C-to-FFC-adapter_2_2026-07-20.csv
hardware/esp32p4 backpack/: 1-PCB_PCB_esp32-dali_2.json  1-Schematic_esp32-dali.json  BOM_esp32-dali_2026-07-20.csv  PickAndPlace_PCB_esp32-dali_2_2026-07-20.csv
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  c6_debug.c  c6_flash.c  camera_pipeline.c  camera_pipeline.h  camera_uart.c  camera_uart.h  idf_component.yml  net_bench.c  settings.c  settings.h  uvc_streaming.c  uvc_streaming.h  web_stream.c  web_stream.h  wifi_console.c  wifi_console.h
tools/: flash_all.ps1  pack_c6_fw.py
